# PWMRelayAdapter

./: .gitignore  README.md  install.sh  pwm_relay_to_sokil_adapter.py  pyproject.toml
src/sova_relay/: __init__.py  __main__.py  adapter.py
systemd/: sova_relay_adapter.service
